--- a/backend/env.example
+++ b/backend/env.example
@@ -1,8 +1,33 @@
+# Server Configuration
 PORT=4000
 NODE_ENV=development
+
+# Database Configuration
 PGHOST=localhost
 PGPORT=5432
 PGUSER=postgres
 PGPASSWORD=postgres
 PGDATABASE=amused
+DB_MAX_CONNECTIONS=20
+DB_IDLE_TIMEOUT=30000
+
+# Business Logic
 LOW_STOCK_THRESHOLD=5
+
+# Security
+CORS_ORIGIN=http://localhost:3000
+
+# Logging
+LOG_LEVEL=info
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_TTL=3600
+
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_TIMEOUT=10000
+OPENAI_MAX_RETRIES=3
