--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "ioredis": "^5.7.0",
     "morgan": "^1.10.0",
+    "openai": "^5.20.0",
     "pg": "^8.13.1",
     "zod": "^3.23.8"
   },
