--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "clean": "rimraf dist",
     "db:up": "docker-compose up -d postgres",
-    "db:down": "docker-compose down"
+    "db:down": "docker-compose down",
+    "test": "jest"
   },
   "keywords": [
     "nodejs",
